<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My Contacts</string>
    <string name="add_contact">Add New Contact</string>
    <string name="name">Enter Name</string>
    <string name="phone_number">Enter Phone Number</string>
    <string name="mail">Enter mail Id</string>
    <string name="relation">Enter Relation</string>
    <string name="clear">Clear</string>
    <string name="save">Save</string>
    <string name="back">Back</string>
    <string name="action_show_contacts">Show All Contacts</string>

</resources>
